Selenoid with remote driver set up fix3